<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:layout_marginBottom="60dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textInHeader"
                style="@style/header"
                android:text="@string/add_camera"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/textName"
                android:layout_marginStart="18dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:text="@string/add_camera_info"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/ip_layout"
                style="@style/containerView"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/textName"
                    android:layout_marginTop="18dp"
                    android:text="@string/camera_ip_title" />

                <TextView
                    android:id="@+id/ip_info"
                    style="@style/textInfo"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/camera_ip_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/zenithAngleTitle" />

                <EditText
                    android:id="@+id/input_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:background="@drawable/background_custom_edit_text"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/camera_ip_example"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray3"
                    android:textCursorDrawable="@drawable/cursor_style"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/name_layout"
                style="@style/containerView"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/textName"
                    android:layout_marginTop="18dp"
                    android:text="@string/name_title" />

                <TextView
                    android:id="@+id/name_info"
                    style="@style/textInfo"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/camera_name_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/zenithAngleTitle" />

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:background="@drawable/background_custom_edit_text"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/name_title"
                    android:imeOptions="actionDone"
                    android:inputType="text|textNoSuggestions|textCapSentences"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray3"
                    android:textCursorDrawable="@drawable/cursor_style"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/save_button"
        style="@style/buttonSave"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>