<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/background_gradient">

    <TextSwitcher
        android:id="@+id/textSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="375dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pin_code_circle"
        app:layout_constraintStart_toStartOf="@+id/pin_code_circle"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textHeader"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            style="@style/textHeader"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/white" />
    </TextSwitcher>

    <LinearLayout
        android:id="@+id/pin_code_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSwitcher">

        <ImageView
            android:id="@+id/first_number_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/pin_code_circle"
            android:backgroundTint="@color/whiteTransparent1" />

        <ImageView
            android:id="@+id/second_number_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/pin_code_circle"
            android:backgroundTint="@color/whiteTransparent1" />

        <ImageView
            android:id="@+id/third_number_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/pin_code_circle"
            android:backgroundTint="@color/whiteTransparent1" />

        <ImageView
            android:id="@+id/fourth_number_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/pin_code_circle"
            android:backgroundTint="@color/whiteTransparent1" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/numbers_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_code_circle">

        <androidx.cardview.widget.CardView
            android:id="@+id/container_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_2" >

            <TextView
                android:id="@+id/number_button_1"
                style="@style/pinCodeButtons"
                android:text="@string/one"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/container_5"
            app:layout_constraintEnd_toStartOf="@id/container_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/container_1">

            <TextView
                android:id="@+id/number_button_2"
                style="@style/pinCodeButtons"
                android:text="@string/two"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_2" >

            <TextView
                android:id="@+id/number_button_3"
                style="@style/pinCodeButtons"
                android:text="@string/three"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_5" >

            <TextView
                android:id="@+id/number_button_4"
                style="@style/pinCodeButtons"
                android:text="@string/four"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/container_8"
            app:layout_constraintEnd_toStartOf="@id/container_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/container_4"
            app:layout_constraintTop_toBottomOf="@+id/container_2" >

            <TextView
                android:id="@+id/number_button_5"
                style="@style/pinCodeButtons"
                android:text="@string/five"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_5" >

            <TextView
                android:id="@+id/number_button_6"
                style="@style/pinCodeButtons"
                android:text="@string/six"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_8" >

            <TextView
                android:id="@+id/number_button_7"
                style="@style/pinCodeButtons"
                android:text="@string/seven"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/container_0"
            app:layout_constraintEnd_toStartOf="@id/container_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/container_7"
            app:layout_constraintTop_toBottomOf="@+id/container_5" >

            <TextView
                android:id="@+id/number_button_8"
                style="@style/pinCodeButtons"
                android:text="@string/eight"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_8" >

            <TextView
                android:id="@+id/number_button_9"
                style="@style/pinCodeButtons"
                android:text="@string/nine"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_8"  >

            <TextView
                android:id="@+id/number_button_0"
                style="@style/pinCodeButtons"
                android:text="@string/zero"
                android:gravity="center"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_button"
            style="@style/pinCodeButtons"
            android:layout_width="90dp"
            android:textSize="19sp"
            android:text="@string/no_pin_code"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginStart="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/container_0"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_8" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container_delete_text"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/container_9"
            app:layout_constraintStart_toStartOf="@+id/container_9"
            app:layout_constraintTop_toBottomOf="@+id/container_8" >

            <ImageView
                android:id="@+id/button_delete_text"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="14dp"
                android:src="@drawable/ic_delete_text"
                app:tint="@color/white"
                android:layout_gravity="center" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>